# meshtrx

./: .gitignore  LICENSE  MESHTRX_DESIGN_SPEC.md  MESHTRX_SPEC.md  PROJECT_LOG.md  README.md
android/MeshTRX/: settings.gradle
android/MeshTRX/app/: build.gradle  proguard-rules.pro
android/MeshTRX/app/src/main/jni/: CMakeLists.txt  codec2_jni.cpp
android/MeshTRX/app/src/main/jni/codec2/: codebookd.c  machdep.c
docs/: HELTEC_V4_SPECS.md  PLAN_LIGHT_SLEEP.md  POWER_OPTIMIZATION.md  TASK_FILE_TRANSFER_V2.md  TASK_NIMBLE_MIGRATION.md  USER_GUIDE.md
firmware/: gen_cert_stubs.py  platformio.ini
firmware/lib/codec2/: codebookge.c  codebooknewamp1.c  codebooknewamp1_energy.c  codebooknewamp2_energy.c  library.json  nlp.c
firmware/src/: audio_codec.cpp  audio_codec.h  battery.cpp  battery.h  beacon.cpp  beacon.h  ble_service.cpp  ble_service.h  call_manager.cpp  call_manager.h  debug.h  lora_radio.cpp  lora_radio.h  main.cpp  oled_display.cpp  oled_display.h  packet.h  repeater.cpp  repeater.h  roger_beep.cpp  roger_beep.h  utils.h  vox.cpp  vox.h  wifi_monitor.cpp  wifi_monitor.h
firmware/test/test_embedded/: test_hardware.cpp
firmware/test/test_native/: test_main.cpp
ios/: DEV_LOG.md  IMPLEMENTATION_PLAN.md
ios/MeshTRX/: Info.plist
ios/MeshTRX/MeshTRX.xcodeproj/: project.pbxproj
web/: README.md  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: LanguageProvider.tsx
web/src/content/: changelog.ts
web/src/lib/: constants.ts  docs-content.ts  flash-utils.ts  i18n.ts
(+116 files in other folders)
